# MLstudy

./: .env  .gitignore  README.md  main.py  pyproject.toml
NLP/nlp100/: 1-100.ipynb  1-50.ipynb  51-60.ipynb  71-80.ipynb  neural_network_tutorial_70_74.py
NLP/nlp100/5/: ai.ja.txt.parsed
NLP/nlp100/7/: test.txt  train.txt  valid.txt  x_test.npy  x_train.npy  x_valid.npy  y_test.txt  y_train.txt  y_valid.txt
NLP/ot_for_nlp/: OTsample.py
OT/: Readme.md  sentence_bert.py  sinkhorn.py  wordvec_ot.py
algorithm/: sorting.py
flow_matching/: main.py
jax_flax/: main.py
mlutils/general/: __init__.py  japanize.py
mlutils/image/dataloader/: dali.py
src/mlutils/general/: environ.py  japanize.py
zerotsuku/python/zerotsuku/: README.md  pyproject.toml
zerotsuku/python/zerotsuku/src/zerotsuku/: __init__.py  utils.py
zerotsuku/python/zerotsuku/src/zerotsuku/ch01/: 3.py  4.py
zerotsuku/python/zerotsuku/src/zerotsuku/common/: functions.py
