[project]
name = "zerotsuku"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "n4okins", email = "63445867+n4okins@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.26.3",
    "jax[cuda12_pip]>=0.4.26",
    "jaxlib>=0.4.26",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
type = "find-links"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zerotsuku"]
